# SevenConcurrencyModelsInSevenWeeks

./: .gitignore  .travis.yml  Notes.md  Notes.rst  README.md  notes2html
1 ThreadsAndLocks/Day1/HelloWorld/: pom.xml
1 ThreadsAndLocks/Day1/PhilosopherGlobalOrderingRule/: pom.xml
1 ThreadsAndLocks/Day2/Interruptible/: pom.xml
1 ThreadsAndLocks/Day2/Uninterruptible/: pom.xml
1 ThreadsAndLocks/Day3/EchoServerBetter/: pom.xml
1 ThreadsAndLocks/Day3/HttpDownloadBetter/: pom.xml
1_ThreadsAndLocks/: settings.gradle
2 Functional Programming/Sum/: core.clj
2 Functional Programming/wordcount/: core.clj  word_frequencies.clj
2_FunctionalProgramming/: project.clj
2_FunctionalProgramming/functional/: project.clj
2_FunctionalProgramming/src/functional_programming/: concurrency.clj  parallelism.clj  server.clj  (+2 more)
2_FunctionalProgramming/wordcount/: project.clj
3_Clojure/clojure-way/: project.clj
4_Actors/actors/: .gitignore  mix.exs
4_Actors_Elixir/cache_gen_server/: .gitignore  mix.exs
4_Actors_Scala/Paths/: build.sbt
4_Actors_Scala/WordCount/: build.sbt
4_Actors_Scala/WordCountFaultTolerant/: README.txt  build.sbt
4_Actors_Scala/actors/: build.sbt
5_Communicating_Sequential_Processes/channels/: project.clj
6_Data_Parallelism/FindDevices/: CMakeLists.txt  main.c
6_Data_Parallelism/FindMinimum/: CMakeLists.txt  main.c
6_Data_Parallelism/MatrixMultiplication/: CMakeLists.txt  main.c
6_Data_Parallelism/MultiplyArrays/: CMakeLists.txt  main.c
6_Data_Parallelism/MultiplyArraysErrorHandling/: CMakeLists.txt  main.c
Code from Book/: README.txt
(+174 files in other folders)
